# embedded-lib

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  api.html  conanfile.py  genindex.html  index.html  objects.inv  search.html  searchindex.js  tutorial.html
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: api.doctree  environment.pickle  index.doctree  tutorial.doctree
.github/workflows/: build-and-publish-doc.yml  build-test.yml  devcontainer.yml  publish-package-jfrogcli.yml  publish-package.yml
_sources/: index.rst.txt  tutorial.rst.txt
_static/: documentation_options.js
doc/: Doxyfile
doc/source/: api.rst  conf.py
include/embeddedlib/: embeddedlib.h
src/: CMakeLists.txt  embeddedlib.c
test_package/: CMakeLists.txt
test_package/src/: example.c
tests/: CMakeLists.txt  testaddinteger.c
